      MComix would only consider the first file and open all remaining
      files in the same directory.
      If the passed files are archives, MComix will only open these archives
      when "Automatically open next archive" is enabled. If only a single file
      is passed, MComix will keep opening all files in that directory.

    - Fix "Automatically open next archive" with empty archives.

    - Speed up thumbnail generation by parallelizing load tasks.
      (inspired by David Zaragoza, who originally suggested to use
      processes instead of threads)

    - New option to delay loading of thumbnails. This way, thumbnails will
      only be generated when they are actually needed, i.e. the thumbnail
      sidebar is open or "Go to page" is used.

    - Library cover generation is now parallelized as well.

    - MComix' configuration files are now stored in ~/.config/mcomix instead
      of in ~/.local/share/mcomix, as originally intended.

    - Added the toolbar show/hide menu to the right-click popup. Previously,
      if the menu bar had been disabled using the normal menu, there was no
      way to get it back.

    - MComix could not switch back to windowed mode when started in fullscreen
      mode on Win32.

    - The MComix window will no longer close instantly after starting up when
      reporting an error due to unsatisfied dependencies on Win32.

    - Fixed the settings dialog window no longer opening when it has been
      closed with the X icon on the dialog before.

    - Required Python version is now 2.5 or newer.

    - Updated Swedish translation. (by Martin Karlsson)

    - Updated Russian translation. (by Евгений Лежнин)

MComix 0.90.3

    - MComix now uses a slightly different directory structure than before. 
      The 'src' folder is now 'mcomix' to provide a correct package name.
      'mcomix.py' is now 'mcomixstarter.py' to avoid confusing Python by
      having a module with the same name as the package around.